# openalex-research-dashboard

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.streamlit/: config.toml
airflow/dags/: etl_pipeline.py
dashboard/: app.py
data/gold/: all_works.parquet  top_authors.parquet  top_institutions.parquet  top_works.parquet  yearly_trends.parquet
data/silver/: works_flat.parquet
docs/: docker-compose.yaml
etl/: bronze.py  gold.py  silver.py
